--- a/css/style.scss
+++ b/css/style.scss
@@ -2161,7 +2161,7 @@ footer {
       object-fit: contain;
     }
   }
-  #profileImageInput {
+  input {
     display: none;
   }
   &.wide {
@@ -2804,6 +2804,11 @@ footer {
       gap: 8px;
       flex-wrap: wrap;
       margin-top: 4px;
+      .profileImage{
+        flex: 1;
+        min-width: 150px;
+        max-width: 250px;
+      }
       .profileImage span img{
         width: 20px;
         height: 20px;
