--- a/css/style.css
+++ b/css/style.css
@@ -446,11 +446,6 @@ content {
   width: min(100% - 16px, 1440px);
   margin: 0 auto 8px;
 }
-@media screen and (min-width: 576px) {
-  .searchForm {
-    display: none;
-  }
-}
 .searchForm .form-control {
   border-radius: 100px;
   padding: 8px 16px;
@@ -3086,4 +3081,78 @@ footer .border-top {
   100% {
     transform: rotate(360deg);
   }
+}
+
+.loactionSearch {
+  display: flex;
+  align-items: center;
+  width: min(100% - 16px, 1440px);
+  margin: 0 auto;
+  flex-wrap: wrap;
+  row-gap: 8px;
+  -moz-column-gap: 16px;
+       column-gap: 16px;
+}
+.loactionSearch .locationText {
+  display: flex;
+  flex: 1 300px;
+  gap: 8px;
+  max-width: 500px;
+  align-items: center;
+  background-color: #f3f3f3;
+  border: 1px solid #e6e6e6;
+  border-radius: 100px;
+  padding: 4px;
+  padding-right: 8px;
+}
+.loactionSearch .locationText .icon {
+  min-width: 40px;
+  aspect-ratio: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: var(--mainColor);
+  border-radius: 100px;
+}
+.loactionSearch .locationText .icon img {
+  filter: brightness(0) invert(1);
+  width: 20px;
+  height: 20px;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+.loactionSearch .locationText .text {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+.loactionSearch .locationText .text .title {
+  font-weight: bold;
+  text-transform: capitalize;
+  color: var(--grayColor);
+  font-size: 12px;
+}
+.loactionSearch .locationText .text .subtitle {
+  color: var(--darkColor);
+  text-transform: capitalize;
+}
+.loactionSearch .locationText .btn {
+  border: 1px solid var(--mainColor);
+  border-radius: 100px;
+  font-size: 14px;
+  background: var(--mainColor);
+  color: var(--whiteColor);
+}
+.loactionSearch .searchForm {
+  flex: 1;
+  min-width: 200px;
+  margin: 0;
+}
+
+.changeBTn {
+  font-size: 14px;
+  border-radius: 100px;
+  background: var(--mainColor);
+  color: var(--whiteColor);
+  align-self: flex-end;
 }/*# sourceMappingURL=style.css.map */
