--- a/css/style.scss
+++ b/css/style.scss
@@ -410,9 +410,7 @@ content {
   border-radius: 100px;
   width: min(100% - 16px, 1440px);
   margin: 0 auto 8px;
-  @media screen and (min-width: 576px) {
-    display: none;
-  }
+
   .form-control {
     border-radius: 100px;
     padding: 8px 16px;
@@ -2569,7 +2567,7 @@ footer {
             font-size: 12px;
           }
           video,
-          img{
+          img {
             height: 150px;
             width: 200px;
             object-fit: cover;
@@ -2606,12 +2604,10 @@ footer {
             }
           }
         }
-        .image{
+        .image {
           background: var(--mainColor11);
-
-
         }
-        .record{
+        .record {
           background-color: #00a650;
           padding: 1px 3px;
         }
@@ -2654,7 +2650,7 @@ footer {
           .upSlide {
             position: absolute;
             // bottom: calc(100% + 8px);
-            bottom: 0 ;
+            bottom: 0;
             left: 0;
             width: 100%;
             background-color: var(--whiteColor);
@@ -3006,7 +3002,6 @@ footer {
   }
 }
 
-
 .loadMore {
   display: flex;
   justify-content: center;
@@ -3034,4 +3029,76 @@ footer {
       transform: rotate(360deg);
     }
   }
+}
+
+.loactionSearch {
+  display: flex;
+  align-items: center;
+  width: min(100% - 16px, 1440px);
+  margin: 0 auto;
+  flex-wrap: wrap;
+  row-gap: 8px;
+  column-gap: 16px;
+  .locationText {
+    display: flex;
+    flex: 1 300px;
+    gap: 8px;
+    max-width: 500px;
+    align-items: center;
+    background-color: #f3f3f3;
+    border: 1px solid #e6e6e6;    ;
+    border-radius: 100px;
+    padding: 4px;
+    padding-right: 8px;
+    .icon {
+      min-width: 40px;
+      aspect-ratio: 1;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: var(--mainColor);
+      border-radius: 100px;
+      img {
+        filter: brightness(0) invert(1);
+        width: 20px;
+        height: 20px;
+        object-fit: contain;
+      }
+    }
+    .text {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      .title{
+        font-weight: bold;
+        text-transform: capitalize;
+        color: var(--grayColor);
+        font-size: 12px;
+      }
+      .subtitle{
+        color: var(--darkColor);
+        text-transform: capitalize;
+      }
+    }
+    .btn{
+      border: 1px solid var(--mainColor);
+      border-radius: 100px;
+      font-size: 14px;
+      background: var(--mainColor);
+      color: var(--whiteColor);
+    }
+  }
+  .searchForm {
+    flex: 1;
+    min-width: 200px;
+    margin: 0;
+  }
+}
+.changeBTn{
+  font-size: 14px;
+  border-radius: 100px;
+  background: var(--mainColor);
+  color: var(--whiteColor);
+  align-self: flex-end;
+  
 }
